--- a/arch/arm/boot/dts/imx6ul-geam-kit.dts
+++ b/arch/arm/boot/dts/imx6ul-geam-kit.dts
@@ -50,11 +50,11 @@
 	compatible = "engicam,imx6ul-geam", "fsl,imx6ul";
 };
 
-&can1 {
+&flexcan1 {
 	status = "okay";
 };
 
-&can2 {
+&flexcan2 {
 	status = "okay";
 };
 
