--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -542,7 +542,7 @@
 };
 
 /* CAN_A implemented by FLEXCAN1 */
-&can1 {
+&flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can>;
