--- a/arch/arm/boot/dts/imx6qdl-tx6.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-tx6.dtsi
@@ -46,8 +46,8 @@
 
 / {
 	aliases {
-		can0 = &can2;
-		can1 = &can1;
+		can0 = &flexcan2;
+		can1 = &flexcan1;
 		ethernet0 = &fec;
 		lcdif_23bit_pins_a = &pinctrl_disp0_1;
 		lcdif_24bit_pins_a = &pinctrl_disp0_2;
@@ -204,14 +204,14 @@
 	status = "okay";
 };
 
-&can1 {
+&flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can_xcvr>;
 	status = "okay";
 };
 
-&can2 {
+&flexcan2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can_xcvr>;
