--- a/arch/arm/boot/dts/imx6ul-tx6ul-mainboard.dts
+++ b/arch/arm/boot/dts/imx6ul-tx6ul-mainboard.dts
@@ -57,11 +57,11 @@
 	/delete-node/ sound;
 };
 
-&can1 {
+&flexcan1 {
 	xceiver-supply = <&reg_3v3>;
 };
 
-&can2 {
+&flexcan2 {
 	xceiver-supply = <&reg_3v3>;
 };
 
