--- a/arch/arm/boot/dts/imx6ul-tx6ul.dtsi
+++ b/arch/arm/boot/dts/imx6ul-tx6ul.dtsi
@@ -45,8 +45,8 @@
 
 / {
 	aliases {
-		can0 = &can2;
-		can1 = &can1;
+		can0 = &flexcan2;
+		can1 = &flexcan1;
 		display = &display;
 		i2c0 = &i2c2;
 		i2c1 = &i2c_gpio;
@@ -268,14 +268,14 @@
 	};
 };
 
-&can1 {
+&flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can_xcvr>;
 	status = "okay";
 };
 
-&can2 {
+&flexcan2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can_xcvr>;
