--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -549,14 +549,14 @@
 	};
 };
 
-&can1 {
+&flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can>;
 	status = "okay";
 };
 
-&can2 {
+&flexcan2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can>;
