--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -1,6 +1,5 @@
 /*
- * Copyright 2016 Freescale Semiconductor, Inc.
- * Copyright 2017-2018 NXP.
+ * Copyright (C) 2016-2019 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -9,8 +8,8 @@
 
 /dts-v1/;
 
-/* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_PICOCOREMX7ULP_BOARD_REVISION	110
+/* Set board revision as 3-digit number, e.g. 120 for board rev. 1.20 */
+#define CONFIG_PICOCOREMX7ULP_BOARD_REVISION	120
 
 /* GPIO numbers
  *
@@ -93,7 +92,6 @@
 #undef CONFIG_PICOCOREMX7ULP_SD
 #undef CONFIG_PICOCOREMX7ULP_SD_CD
 #undef CONFIG_PICOCOREMX7ULP_SD_WP
-#undef CONFIG_PICOCOREMX7ULP_UART_C
 #endif
 
 #include "imx7ulp.dtsi"
@@ -149,14 +147,6 @@
 		};
 #endif
 
-		reg_usb_otg1_vbus: usb_otg1_vbus {
-			compatible = "regulator-fixed";
-			regulator-name = "usb_otg1_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio_ptc 0 GPIO_ACTIVE_LOW>;
-		};
-
 		reg_vsd_3v3: regulator@1 {
 			compatible = "regulator-fixed";
 			reg = <1>;
@@ -195,13 +185,6 @@
 		};
 #endif
 	};
-
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
-	extcon_usb1: extcon_usb1 {
-		compatible = "linux,extcon-usb-gpio";
-		id-gpio = <&gpio_ptc 8 GPIO_ACTIVE_HIGH>;
-	};
-#endif
 
 	/* TODO check node */
 	pf1550-rpmsg {
@@ -287,8 +270,10 @@
 	arm-supply= <&sw1_reg>;
 };
 
-// kernel panic if its enabled - Job Ring error
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION <= 110)
+/* kernel panic if its enabled - Job Ring error
+ * error doesn´t occur if CONFIG_SOC_MX6Q is set
+ */
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION <= 120)
 &crypto {
 	status = "disabled";
 };
@@ -456,10 +441,6 @@
 &usbotg1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
-	vbus-supply = <&reg_usb_otg1_vbus>;
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
-	extcon = <0>, <&extcon_usb1>;
-#endif
 	srp-disable;
 	hnp-disable;
 	adp-disable;
@@ -656,7 +637,8 @@
 	picocoremx7ulp { //TODO: check node name and subnodes
 		pinctrl_hog_0: hoggrp-0 {
 			fsl,pins = <
-				/* pins for the M4-Core */
+				/* pins for the M4-Core - should be set by
+				 * M4 */
 #if 0
 				/* GPIOs -> default low for M4 */
 				/* 3.3 V */
@@ -751,15 +733,25 @@
 				IMX7ULP_PAD_PTC1__PTC1		0x00002
 
 				/* GPIOs -> default low for A7 */
+				/* 1.8V/3.3V PTE */
+#ifndef CONFIG_PICOCOREMX7ULP_WLAN
+				/* WL_PDn */
+				IMX7ULP_PAD_PTE6__PTE6		0x00002
+#endif
+#ifndef CONFIG_PICOCOREMX7ULP_SD_CD
+				IMX7ULP_PAD_PTE13__PTE13	0x00002
+#endif
+#ifndef CONFIG_PICOCOREMX7ULP_SD_WP
+				IMX7ULP_PAD_PTE12__PTE12	0x00002
+#endif
+				/* BT_REG_ON */
+				IMX7ULP_PAD_PTE7__PTE7		0x00002
+
 				/* 1.8 V */
 				IMX7ULP_PAD_PTC9__PTC9		0x00002
 				IMX7ULP_PAD_PTC11__PTC11	0x00002
 				IMX7ULP_PAD_PTC12__PTC12	0x00002
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
-				IMX7ULP_PAD_PTC13__PTC13	0x00002
-#else
 				IMX7ULP_PAD_PTC8__PTC8		0x00002
-#endif
 				IMX7ULP_PAD_PTC14__PTC14	0x00002
 				IMX7ULP_PAD_PTC15__PTC15	0x00002
 				IMX7ULP_PAD_PTC16__PTC16	0x00002
@@ -912,12 +904,6 @@
 
 		pinctrl_usdhc1_rst: usdhc1grp_rst {
 			fsl,pins = <
-#ifdef CONFIG_PICOCOREMX7ULP_WLAN
-				/* WL_REG_ON */
-				IMX7ULP_PAD_PTE6__PTE6		0x20002
-				/* WL_WAKE */
-				IMX7ULP_PAD_PTE13__PTE13	0x10002
-#endif
 #ifdef CONFIG_PICOCOREMX7ULP_SD_CD
 				/* USDHC1 card detect */
 				IMX7ULP_PAD_PTE13__PTE13	0x10003
@@ -926,6 +912,10 @@
 				/* USDHC1 WP */
 				IMX7ULP_PAD_PTE12__PTE12	0x10003
 #endif
+#ifdef CONFIG_PICOCOREMX7ULP_WLAN
+				/* WL_PDn */
+				IMX7ULP_PAD_PTE6__PTE6		0x10003
+#endif
 			>;
 		};
 #endif
@@ -933,13 +923,9 @@
 		pinctrl_usbotg1: usbotg1grp {
 			fsl,pins = <
 				/* USB otg Power enable */
-				IMX7ULP_PAD_PTC0__PTC0		0x20003
+				IMX7ULP_PAD_PTE15__USB0_PWR	0x00003
 				/* USB_OTG1_ID: low: host, open: device */
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
-				IMX7ULP_PAD_PTC8__PTC8		0x10003
-#else
 				IMX7ULP_PAD_PTC13__USB0_ID	0x10003
-#endif
 			>;
 		};
 	};
