Have new minimal defconfigs for fsimx6/sx/ul
Using

  make savedefconfig

creates slightly different defconfigs in 4.9.88 than before. Also add
CONFIG_CPU_FREQ_STAT to have some statistics of how long each CPU
frequency is active and how often the state is changed. This was
enabled by default in the past but needs to be enabled manually now.

--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -18,14 +18,15 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6ULL=y
 CONFIG_VMSPLIT_2G=y
+CONFIG_ARM_PSCI=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_CMA=y
 CONFIG_CMDLINE="noinitrd console=ttymxc0,115200"
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -52,9 +53,7 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_INET_XFRM_MODE_TRANSPORT is not set
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
-# CONFIG_INET_LRO is not set
 CONFIG_INET_UDP_DIAG=y
-CONFIG_IPV6=y
 CONFIG_NETFILTER=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -66,8 +65,6 @@ CONFIG_NF_TABLES_INET=y
 CONFIG_NFT_EXTHDR=y
 CONFIG_NFT_META=y
 CONFIG_NFT_CT=y
-CONFIG_NFT_RBTREE=y
-CONFIG_NFT_HASH=y
 CONFIG_NFT_COUNTER=y
 CONFIG_NFT_LOG=y
 CONFIG_NFT_LIMIT=y
@@ -77,6 +74,7 @@ CONFIG_NFT_NAT=y
 CONFIG_NFT_QUEUE=y
 CONFIG_NFT_REJECT=y
 CONFIG_NFT_COMPAT=y
+CONFIG_NFT_HASH=y
 CONFIG_NETFILTER_XT_MARK=y
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
@@ -256,7 +254,6 @@ CONFIG_SCSI_SCAN_ASYNC=y
 # CONFIG_SCSI_LOWLEVEL is not set
 CONFIG_ATA=y
 CONFIG_SATA_AHCI_PLATFORM=y
-CONFIG_AHCI_IMX=y
 CONFIG_PATA_IMX=y
 CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_ARC is not set
@@ -282,7 +279,6 @@ CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
 CONFIG_HOSTAP=y
-CONFIG_WL_TI=y
 CONFIG_WL12XX=m
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SDIO=m
@@ -341,11 +337,10 @@ CONFIG_IR_GPIO_CIR=m
 CONFIG_LIRC_GPIOBLASTER=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MXC_CAPTURE=y
-CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
+CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_SOC_CAMERA=y
 CONFIG_DRM=y
-CONFIG_FB=y
 # CONFIG_FB_MX3 is not set
 CONFIG_FB_MXS=y
 # CONFIG_FB_MXC is not set
@@ -357,7 +352,6 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
@@ -372,7 +366,6 @@ CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ASRC=y
 CONFIG_SND_SOC_FSL_SSI=y
-CONFIG_SND_SOC_FSL_SAI=y
 CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
@@ -431,9 +424,9 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 CONFIG_RTC_DRV_PCF8563=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_DMADEVICES=y
-CONFIG_MXC_PXP_V2=y
 CONFIG_IMX_SDMA=y
 CONFIG_MXS_DMA_EXT=y
+CONFIG_MXC_PXP_V2=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_LIRC_STAGING=y
@@ -451,9 +444,6 @@ CONFIG_EXT2_FS_SECURITY=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
-CONFIG_EXT4_FS=y
-CONFIG_EXT4_FS_POSIX_ACL=y
-CONFIG_EXT4_FS_SECURITY=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
@@ -506,7 +496,6 @@ CONFIG_CRYPTO_WP512=y
 CONFIG_CRYPTO_BLOWFISH=y
 CONFIG_CRYPTO_CAMELLIA=y
 CONFIG_CRYPTO_TWOFISH=y
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
