--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -19,22 +19,22 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
-CONFIG_SOC_IMX6SLL=y
 CONFIG_SOC_IMX6SX=y
-CONFIG_SOC_IMX6UL=y
 CONFIG_SOC_IMX6ULL=y
 CONFIG_SOC_IMX7D=y
+CONFIG_SOC_IMX6SLL=y
 # CONFIG_SWP_EMULATE is not set
 CONFIG_SMP=y
 CONFIG_VMSPLIT_2G=y
+CONFIG_ARM_PSCI=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_CMA=y
 CONFIG_CMDLINE="noinitrd console=ttymxc0,115200"
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -61,9 +61,7 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_INET_XFRM_MODE_TRANSPORT is not set
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
-# CONFIG_INET_LRO is not set
 CONFIG_INET_UDP_DIAG=y
-CONFIG_IPV6=y
 CONFIG_NETFILTER=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -75,8 +73,6 @@ CONFIG_NF_TABLES_INET=y
 CONFIG_NFT_EXTHDR=y
 CONFIG_NFT_META=y
 CONFIG_NFT_CT=y
-CONFIG_NFT_RBTREE=y
-CONFIG_NFT_HASH=y
 CONFIG_NFT_COUNTER=y
 CONFIG_NFT_LOG=y
 CONFIG_NFT_LIMIT=y
@@ -86,6 +82,7 @@ CONFIG_NFT_NAT=y
 CONFIG_NFT_QUEUE=y
 CONFIG_NFT_REJECT=y
 CONFIG_NFT_COMPAT=y
+CONFIG_NFT_HASH=y
 CONFIG_NETFILTER_XT_MARK=y
 CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
@@ -295,9 +292,9 @@ CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
-# CONFIG_RTL_CARDS is not set
 CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
+# CONFIG_RTL_CARDS is not set
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_MATRIXKMAP=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
@@ -350,18 +347,17 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MXC_OUTPUT=y
 CONFIG_VIDEO_MXC_CAPTURE=y
+CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_MXC_CAMERA_OV5640_MIPI=y
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=y
 CONFIG_VIDEO_MXC_IPU_OUTPUT=y
 CONFIG_VIDEO_MXC_PXP_V4L2=y
-CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CODA=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_VIDEO_ADV739X=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
-CONFIG_FB=y
 # CONFIG_FB_MX3 is not set
 CONFIG_FB_MXS=y
 CONFIG_FB_MXC_SYNC_PANEL=y
@@ -377,7 +373,6 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
@@ -434,7 +429,6 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_MXC_IPU=y
-CONFIG_MXC_GPU_VIV=y
 CONFIG_MXC_MIPI_CSI2=y
 CONFIG_MXC_HDMI_CEC=y
 CONFIG_NEW_LEDS=y
@@ -454,9 +448,9 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 CONFIG_RTC_DRV_PCF8563=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_DMADEVICES=y
-CONFIG_MXC_PXP_V2=y
 CONFIG_IMX_SDMA=y
 CONFIG_MXS_DMA_EXT=y
+CONFIG_MXC_PXP_V2=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 # CONFIG_IOMMU_SUPPORT is not set
@@ -471,9 +465,6 @@ CONFIG_EXT2_FS_SECURITY=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
-CONFIG_EXT4_FS=y
-CONFIG_EXT4_FS_POSIX_ACL=y
-CONFIG_EXT4_FS_SECURITY=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
@@ -525,7 +516,6 @@ CONFIG_CRYPTO_WP512=y
 CONFIG_CRYPTO_BLOWFISH=y
 CONFIG_CRYPTO_CAMELLIA=y
 CONFIG_CRYPTO_TWOFISH=y
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
