--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -248,6 +248,7 @@
 	dr_mode = "host";
 #ifdef CONFIG_CUBEA7UL_HAVE_USB_OTG2_PWR_OC
 	pwr-active-high;
+	over-current-active-low;
 #else
 	disable-over-current;
 #endif
