--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -1124,7 +1124,9 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg>;
 //###	vbus-supply = <&reg_usb_otg_vbus>;
-#ifndef CONFIG_EFUSA9_HAVE_USB_OTG_OC
+#ifdef CONFIG_EFUSA9_HAVE_USB_OTG_OC
+	over-current-active-low;
+#else
 	disable-over-current;
 #endif
 	status = "okay";
