Split picocoremx6ull.dts into UL and ULL version
Even if F&S currently only has PicoCoreMX6UL boards with i.MX6ULL, there
may be versions with i.MX6UL CPUs in the future, too. Have both versions
available, picocoremx6ul.dts and picocoremx6ull.dts. The second one
simply defines CONFIG_PICOCOREMX6UL_ULL and then includes the first one.
By looking at this macro, the device tree file can distinguish between
UL and ULL where required.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -527,6 +527,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	efusa7ul.dtb \
 	picocom1.2.dtb \
 	picocoma7.dtb \
+	picocoremx6ul.dtb \
 	cubea7ul.dtb \
 	gar1.dtb \
 	imx6ul-9x9-evk.dtb \
@@ -558,6 +559,7 @@ dtb-$(CONFIG_SOC_IMX6ULL) += \
 	imx6ull-14x14-evk-gpmi-weim.dtb \
 	imx6ull-14x14-evk-usb-certi.dtb \
 	efusa7ull.dtb \
+	picocoremx6ull.dtb \
 	imx6ull-9x9-evk.dtb \
 	imx6ull-9x9-evk-btwifi.dtb \
 	imx6ull-9x9-evk-btwifi-oob.dtb \
