--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -243,15 +243,16 @@
 		reg_lcd_bl: backlight_lcd {
 			compatible = "regulator-fixed";
 			regulator-name = "lcd-bl";
-			gpio = <&pca963x 0 GPIO_ACTIVE_HIGH>;
+			gpio = <&pca963x 0 0>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 		reg_ldb_bl: backlight_ldb {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
-			gpio = <&gpio2 8 GPIO_ACTIVE_HIGH>;
+			gpio = <&gpio2 8 0>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
@@ -261,7 +262,7 @@
 		reg_vlcd: vlcd {
 			compatible = "regulator-fixed";
 			regulator-name = "VLCD";
-			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
+			gpio = <&gpio2 11 0>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
@@ -509,7 +510,7 @@
 	/* RGB-LCD backlight PWM on RGB adapter */
 	backlight_lcd {
 		compatible = "pwm-backlight";
-		pwms = <&pca963x 1 640000 PWM_POLARITY_INVERTED>;
+		pwms = <&pca963x 1 640000 0>;
 		power-supply = <&reg_lcd_bl>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
@@ -869,25 +870,27 @@
 			reg = <0>;
 			label = "0-PWRCTL";
 			type = "GPIO";
-			default-on;
+			default-on;		/* or: keep-value */
 			active-high;
 		};
 		led@1 {
 			reg = <1>;
 			label = "1-LEDCTRL";
 			type = "PWM";
-			default-on;
+			default-on;		/* or: keep-value */
+			active-low;
 		};
 		led@2 {
 			reg = <2>;
 			label = "2-ROTATE";
 			type = "GPIO";
-			active-high;
+			active-high;		/* optionally: keep value */
 		};
 		led@3 {
 			reg = <3>;
 			label = "3-unused";
 			type = "LED";
+			active-low;
 		};
 	};
 
