--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -137,7 +137,7 @@ wvga {					\
 
 	backlight_lcd {
 		compatible = "pwm-backlight";
-		pwms = <&pca963x 1 640000 PWM_POLARITY_INVERTED>;
+		pwms = <&pca963x 1 640000 0>;
 		power-supply = <&reg_lcd_bl>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
@@ -193,6 +193,7 @@ wvga {					\
 			gpio = <&pca963x 0 0>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
+			enable-active-high;
 		};
 
 		/* SGTL5000 analog voltage */
@@ -435,25 +436,27 @@ wvga {					\
 			reg = <0>;
 			label = "0-PWRCTL";
 			type = "GPIO";
-			default-on;
+			default-on;		/* or: keep-value */
 			active-high;
 		};
 		led@1 {
 			reg = <1>;
 			label = "1-LEDCTRL";
 			type = "PWM";
-			default-on;
+			default-on;		/* or: keep-value */
+			active-low;
 		};
 		led@2 {
 			reg = <2>;
 			label = "2-ROTATE";
 			type = "GPIO";
-			active-high;
+			active-high;		/* optionally: keep value */
 		};
 		led@3 {
 			reg = <3>;
 			label = "3-unused";
 			type = "LED";
+			active-low;
 		};
 	};
 
