Clarify F&S device tree settings (LVDS, Ilitek, audio clock)
Clarify a couple of minor settings in F&S device trees. All these changes
are purely syntactical, no functionality will be changed.

- The Ilitek touch driver ili210x.c was wrongly named Ilink when device
  tree support was added. Fix the compatibility string in the driver and
  in all F&S device trees that were using it. Also rename the CONFIG macros
  accordingly.
- The bit mapping (LVDS_MAPPING) for LVDS in 24 bit mode (SPWG or JEIDA)
  was listed as first entry of the LVDS settings, next to LVDS_BPP. However
  it refers to LVDS_DATA_WIDTH/LVDS_BUS_WIDTH. Move this setting a few lines
  down and improve the comment to avoid misunderstandings.
- Some comments still mentioned 24 MHz as audio clock. However audio clock
  has changed and is 24.576 or 12.288 MHz in most places. Remove the value
  from the comment.
- The default display setting for qblissa9dl.dts was unintentionally changed
  to HDMI in a previous commit. Change back to LVDS0.
- Drop unused pinctrl_espi_irq on efusa9qdl.dtsi. These pingroups are not
  used. If someone needs the IRQ lines, he has to add them manually, either
  in the SPI groups or in the hog group.

--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -79,17 +79,17 @@
 
 /*
  * Configure LVDS0 settings here (ignored if LVDS0 is not used)
- * Mapping:
+ * Mapping (refers to LVDS_DATA_WIDTH, not LVDS_BPP):
  *
  * - "spwg":  18 bpp or 24 bpp, in case of 24 bpp, bits 6 and 7 of each color
  *            are encoded on fourth LVDS differential data pair
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
-#define CONFIG_EFUSA9_LVDS0_MAPPING	"spwg"
 #define CONFIG_EFUSA9_LVDS0_BPP		32
 #define CONFIG_EFUSA9_LVDS0_PIX_FMT	"RGB666"
 #define CONFIG_EFUSA9_LVDS0_DATA_WIDTH	18
+#define CONFIG_EFUSA9_LVDS0_MAPPING	"spwg"
 #define CONFIG_EFUSA9_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
@@ -111,10 +111,10 @@ wvga {					\
  * Configure LVDS1 settings here (ignored if LVDS1 is not used)
  * For mapping value see above.
  */
-#define CONFIG_EFUSA9_LVDS1_MAPPING	"spwg"
 #define CONFIG_EFUSA9_LVDS1_BPP		32
 #define CONFIG_EFUSA9_LVDS1_PIX_FMT	"RGB666"
 #define CONFIG_EFUSA9_LVDS1_DATA_WIDTH	18
+#define CONFIG_EFUSA9_LVDS1_MAPPING	"spwg"
 #define CONFIG_EFUSA9_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
@@ -164,7 +164,7 @@ wvga {					\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On efusA9, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -174,7 +174,7 @@ wvga {					\
 //#define CONFIG_EFUSA9_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9_CAPTOUCH_FT5x06
 //#define CONFIG_EFUSA9_CAPTOUCH_SITRONIX
-//#define CONFIG_EFUSA9_CAPTOUCH_ILINK
+//#define CONFIG_EFUSA9_CAPTOUCH_ILITEK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_EFUSA9_CMA_SIZE		0x14000000
