--- a/arch/arm/boot/dts/armstonea5.dts
+++ b/arch/arm/boot/dts/armstonea5.dts
@@ -51,16 +51,16 @@ lcd_wvga {				\
 
 /*
  * Configure LVDS settings here (ignored if LVDS is not used)
- * Mapping:
+ * Mapping (refers to LVDS_BUS_WIDTH, not LVDS_BPP):
  *
  * - "spwg":  18 bpp or 24 bpp, in case of 24 bpp, bits 6 and 7 of each color
  *            are encoded on fourth LVDS differential data pair
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
-#define CONFIG_ARMSTONEA5_LVDS_MAPPING	"spwg"
 #define CONFIG_ARMSTONEA5_LVDS_BPP		32
 #define CONFIG_ARMSTONEA5_LVDS_BUS_WIDTH	18
+#define CONFIG_ARMSTONEA5_LVDS_MAPPING	"spwg"
 #define CONFIG_ARMSTONEA5_LVDS_TIMING \
 lvds_wvga {				\
 	clock-frequency = <33500000>;	\
@@ -86,7 +86,7 @@ lvds_wvga {				\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On armstonea5, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -96,7 +96,7 @@ lvds_wvga {				\
 //#define CONFIG_ARMSTONEA5_CAPTOUCH_MXT224
 //#define CONFIG_ARMSTONEA5_CAPTOUCH_FT5x06
 //#define CONFIG_ARMSTONEA5_CAPTOUCH_SITRONIX
-//#define CONFIG_ARMSTONEA5_CAPTOUCH_ILINK
+//#define CONFIG_ARMSTONEA5_CAPTOUCH_ILITEK
 
 /* Network */
 #define CONFIG_ARMSTONEA5_ETH0
