--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -982,10 +982,10 @@
 	};
 #endif
 
-#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
@@ -1280,7 +1280,7 @@
 		/* Pin configs that don't belong anywhere else */
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				/* Audio clock 24MHz */
+				/* Audio clock */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x130b0
 
 				/* VLCD_ON for reg_vlcd */
