--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -744,10 +744,10 @@
 	};
 #endif
 
-#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_ARMSTONEA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
@@ -1103,7 +1103,7 @@
 				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x030b0
 				MX6QDL_PAD_EIM_WAIT__GPIO5_IO00		0x030b0
 
-				/* Audio clock 24MHz */
+				/* Audio clock */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x130b0
 
 				/* Camera clock, ref. ov564x_mipi */
