--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -60,7 +60,7 @@ wvga {					\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On efusA7UL, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -70,7 +70,7 @@ wvga {					\
 //#define CONFIG_EFUSA7UL_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA7UL_CAPTOUCH_FT5x06
 //#define CONFIG_EFUSA7UL_CAPTOUCH_SITRONIX
-//#define CONFIG_EFUSA7UL_CAPTOUCH_ILINK
+//#define CONFIG_EFUSA7UL_CAPTOUCH_ILITEK
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_EFUSA7UL_CMA_SIZE 0x4000000
@@ -739,10 +739,10 @@ wvga {					\
 	};
 #endif
 
-#ifdef CONFIG_EFUSA7UL_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_EFUSA7UL_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio5>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
