--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -975,10 +975,10 @@
 	};
 #endif
 
-#ifdef CONFIG_EFUSA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_EFUSA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
@@ -1348,7 +1348,7 @@
 		/* Pin configs that don't belong anywhere else */
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				/* Audio clock 24MHz */
+				/* Audio clock */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x130b0
 #if (CONFIG_EFUSA9_BOARD_REVISION >= 121)
 				/* Camera clock 24MHz */
@@ -1488,20 +1488,6 @@
 				MX6QDL_PAD_EIM_LBA__GPIO2_IO27		0x1b0b0
 			>;
 		};
-
-		/* IRQs for SPI_A */
-		pinctrl_espi2_1_irq: espi2_1_intgrp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_7__GPIO1_IO07		0x1b0b0
-			>;
-		};
-
-		pinctrl_espi2_2_irq: espi2_2_intgrp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_8__GPIO1_IO08		0x1b0b0
-			>;
-		};
-
 #endif /* CONFIG_EFUSA9_SPI_A */
 
 #ifdef CONFIG_EFUSA9_SPI_B
@@ -1522,19 +1508,6 @@
 				MX6QDL_PAD_EIM_D24__GPIO3_IO24		0x1b0b0
 				/* ECSPI1_SS3  - slave (chip) select 2 */
 				MX6QDL_PAD_EIM_D25__GPIO3_IO25		0x1b0b0
-			>;
-		};
-
-		/* IRQs for SPI_B */
-		pinctrl_espi1_1_irq: espi1_1_intgrp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_5__GPIO1_IO05		0x1b0b0
-			>;
-		};
-
-		pinctrl_espi1_2_irq: espi1_2_intgrp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x1b0b0
 			>;
 		};
 #endif /* CONFIG_EFUSA9_SPI_B */
