--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -709,10 +709,10 @@
 	};
 #endif
 
-#ifdef CONFIG_NETDCUA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_NETDCUA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <7 IRQ_TYPE_EDGE_FALLING>;
@@ -989,7 +989,7 @@
 		/* Pin configs that don't belong anywhere else */
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				/* Audio clock 24MHz */
+				/* Audio clock */
 				MX6QDL_PAD_GPIO_19__CCM_CLKO1		0x00031
 				/* 5V_3V3n for VLCD */
 				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x13059
