--- a/arch/arm/boot/dts/picocoremx6sx.dts
+++ b/arch/arm/boot/dts/picocoremx6sx.dts
@@ -55,7 +55,7 @@ lcd_wvga {				\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On picocore bb, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -65,7 +65,7 @@ lcd_wvga {				\
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_MXT224
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_FT5x06
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_SITRONIX
-//#define CONFIG_PICOCOREMX6SX_CAPTOUCH_ILINK
+//#define CONFIG_PICOCOREMX6SX_CAPTOUCH_ILITEK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_PICOCOREMX6SX_CMA_SIZE 0x14000000
@@ -655,10 +655,10 @@ lcd_wvga {				\
 	};
 #endif
 
-#ifdef CONFIG_PICOCOREMX6SX_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_PICOCOREMX6SX_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio7>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
