--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -63,7 +63,7 @@ wvga {					\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On efusA7UL, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -73,7 +73,7 @@ wvga {					\
 //#define CONFIG_PICOCOREMX6UL_CAPTOUCH_MXT224
 //#define CONFIG_PICOCOREMX6UL_CAPTOUCH_FT5x06
 //#define CONFIG_PICOCOREMX6UL_CAPTOUCH_SITRONIX
-//#define CONFIG_PICOCOREMX6UL_CAPTOUCH_ILINK
+//#define CONFIG_PICOCOREMX6UL_CAPTOUCH_ILITEK
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_PICOCOREMX6UL_CMA_SIZE 0x4000000
