--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -42,7 +42,7 @@
  * - 4-wire/5-wire analog resistive touch, touch controller on SKIT
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
- * - PCAP touch based on Ilink controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
  *
  * On picocoremx7ulp, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -50,7 +50,7 @@
 //#define CONFIG_PICOCOREMX7ULP_4WTOUCH_SX8655_ONBOARD
 //#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_MXT224
 //#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_SITRONIX
-//#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_ILINK
+//#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_ILITEK
 
 /* WLAN */
 #define CONFIG_PICOCOREMX7ULP_WLAN
@@ -548,10 +548,10 @@
 	};
 #endif
 
-#ifdef CONFIG_PICOCOREMX7ULP_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_PICOCOREMX7ULP_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio_ptf>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
