--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -913,10 +913,10 @@
 	};
 #endif
 
-#ifdef CONFIG_PICOMODA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch on Touch-Connector (I2C) */
+#ifdef CONFIG_PICOMODA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio2>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
@@ -1233,7 +1233,7 @@
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 #if (CONFIG_PICOMODA9_BOARD_REVISION >= 110)
-				/* Audio clock 24MHz */
+				/* Audio clock */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x130b0
 #else
 				/* GPIO to not interfere with LCD_R4 */
