--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -755,10 +755,10 @@
 	};
 #endif
 
-#ifdef CONFIG_QBLISSA9_CAPTOUCH_ILINK
-	/* Ilink PCAP touch */
+#ifdef CONFIG_QBLISSA9_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch */
 	ili210x@41 {
-		compatible = "Ilink,ili210x";
+		compatible = "Ilitek,ili210x";
 		reg = <0x41>;
 		interrupt-parent = <&gpio4>;
 		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
