--- a/arch/arm/boot/dts/qblissa9r2q.dts
+++ b/arch/arm/boot/dts/qblissa9r2q.dts
@@ -69,17 +69,17 @@
 
 /*
  * Configure LVDS0 settings here (ignored if LVDS0 is not used)
- * Mapping:
+ * Mapping (refers to LVDS_DATA_WIDTH, not LVDS_BPP):
  *
  * - "spwg":  18 bpp or 24 bpp, in case of 24 bpp, bits 6 and 7 of each color
  *            are encoded on fourth LVDS differential data pair
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
-#define CONFIG_QBLISSA9R2_LVDS0_MAPPING	"spwg"
 #define CONFIG_QBLISSA9R2_LVDS0_BPP	32
 #define CONFIG_QBLISSA9R2_LVDS0_PIX_FMT	"RGB666"
 #define CONFIG_QBLISSA9R2_LVDS0_DATA_WIDTH	18
+#define CONFIG_QBLISSA9R2_LVDS0_MAPPING	"spwg"
 #define CONFIG_QBLISSA9R2_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
@@ -101,10 +101,10 @@ wvga {					\
  * Configure LVDS1 settings here (ignored if LVDS1 is not used)
  * For mapping value see above.
  */
-#define CONFIG_QBLISSA9R2_LVDS1_MAPPING	"spwg"
 #define CONFIG_QBLISSA9R2_LVDS1_BPP	32
 #define CONFIG_QBLISSA9R2_LVDS1_PIX_FMT	"RGB666"
 #define CONFIG_QBLISSA9R2_LVDS1_DATA_WIDTH	18
+#define CONFIG_QBLISSA9R2_LVDS1_MAPPING	"spwg"
 #define CONFIG_QBLISSA9R2_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
@@ -146,7 +146,7 @@ wvga {					\
  * - PCAP touch based on Maxtouch controller (MXT224, etc.), on SMB/I2C port
  * - PCAP touch based on Focaltech controller (FT5x06), on SMB/I2C port
  * - PCAP touch based on Sitronix controller (ST1633i), on SMB/I2C port
- * - PCAP touch based on Ilink controller (ILI12xx), on SMB/I2C port
+ * - PCAP touch based on Ilitek controller (ILI12xx), on SMB/I2C port
  *
  * Select none if you do not need touch support.
  */
@@ -155,7 +155,7 @@ wvga {					\
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_MXT224
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_FT5x06
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_SITRONIX
-//#define CONFIG_QBLISSA9R2_CAPTOUCH_ILINK
+//#define CONFIG_QBLISSA9R2_CAPTOUCH_ILITEK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
 #define CONFIG_QBLISSA9R2_CMA_SIZE	0x14000000
