Replace deprecated fsl,uart-has-rtscts in F&S device trees
Using fsl,uart-has-rtscts in device trees is marked as deprecated in
drivers/tty/serial/imx.c. Use generic uart-has-rtscts instead.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -1087,7 +1087,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2_1>;
 #ifdef CONFIG_ARMSTONEA9_UART_A_RTSCTS
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 #endif
 	status = "okay";
 };
