--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -625,7 +625,7 @@ wvga {					\
 &uart5 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart5>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 	status = "okay";
 };
 
