--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -232,7 +232,7 @@
 &uart8 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart8>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 	status = "okay";
 };
 
