--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -787,7 +787,7 @@
 &uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 	status = "okay";
 };
 #endif /* CONFIG_NETDCUA9_UART_A */
@@ -799,7 +799,7 @@
 	pinctrl-0 = <&pinctrl_uart5>;
 #ifdef CONFIG_NETDCUA9_UART_B_RS485
 	rs485-supply = <&reg_rs485>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 #endif
 	status = "okay";
 };
