--- a/arch/arm/boot/dts/picocoma7.dts
+++ b/arch/arm/boot/dts/picocoma7.dts
@@ -265,7 +265,7 @@ chosen {
 &uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 
 	status = "okay";
 };
