Improve firmware download in btmrvl_sdio.c
Firmware download in the bluetooth part of Marvell WLAN/BT chips has
longer delays than necessary.

- The delay in btmrvl_sdio_verify_fw_download() was increased from
  msleep(10) to msleep(100), so the number of tries MAX_POLL_TRIES
  should be decreased from 100 to 10 to keep the same overall timeout.
- In function btmrvl_sdio_download_fw(), if the function is not the
  winner to download the firmware, a comment indicates that the
  current function will give the other function time to proceed with
  the download. However this will not work if the host is still
  claimed, because then the other function can not access the SDIO
  port. So release the port while waiting.
- In btmrvl_sdio_probe_of(), the message about missing platform data
  needs a newline. FIXME: The platform data is only required for some
  chip types. In all other cases, this message should not appear at all.

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -1453,7 +1453,7 @@
 				/* WLAN_RESET, use internal pull-up */
 				MX6QDL_PAD_ENET_RXD0__GPIO1_IO27	0x1b0b0
 #else
-				/* WLAN_RESET, has external pull-up */
+				/* WLAN_RESET, has external pull-down */
 				MX6QDL_PAD_ENET_RXD0__GPIO1_IO27	0x100b0
 #endif
 			>;
