--- a/arch/arm/boot/dts/picomoda9q.dts
+++ b/arch/arm/boot/dts/picomoda9q.dts
@@ -74,6 +74,12 @@
 #define CONFIG_PICOMODA9_HDMI_MODE_STR	"1920x1080M@60"
 
 /*
+ * F&S has changed the default LVDS display. To use the previous settings
+ * activate the following define.
+ */
+//#define DISPLAY_LVDS_CHIMEI
+
+/*
  * Configure LVDS0 settings here (ignored if LVDS0 is not used)
  * Mapping (refers to LVDS_DATA_WIDTH, not LVDS_BPP):
  *
@@ -82,6 +88,28 @@
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
+#ifndef DISPLAY_LVDS_CHIMEI
+#define CONFIG_PICOMODA9_LVDS0_BPP		32
+#define CONFIG_PICOMODA9_LVDS0_PIX_FMT		"RGB24"
+#define CONFIG_PICOMODA9_LVDS0_DATA_WIDTH	24
+#define CONFIG_PICOMODA9_LVDS0_MAPPING		"spwg"
+#define CONFIG_PICOMODA9_LVDS0_TIMING \
+wvga {					\
+	clock-frequency = <33500000>;	\
+	hactive = <800>;		\
+	vactive = <480>;		\
+	hfront-porch = <4>;		\
+	hback-porch = <44>;		\
+	hsync-len = <2>;		\
+	vback-porch = <21>;		\
+	vfront-porch = <11>;		\
+	vsync-len = <2>;		\
+	hsync-active = <0>;		\
+	vsync-active = <0>;		\
+	de-active = <1>;		\
+	pixelclk-active = <0>;		\
+}
+#else
 #define CONFIG_PICOMODA9_LVDS0_BPP		32
 #define CONFIG_PICOMODA9_LVDS0_PIX_FMT		"RGB666"
 #define CONFIG_PICOMODA9_LVDS0_DATA_WIDTH	18
@@ -102,6 +130,7 @@ wvga {					\
 	de-active = <1>;		\
 	pixelclk-active = <0>;		\
 }
+#endif
 
 /*
  * Configure touch screen:
@@ -116,8 +145,8 @@ wvga {					\
  * select more than one entry! Select none if you do not need touch support.
  */
 //#define CONFIG_PICOMODA9_4WTOUCH_SX8655_ONBOARD
-#define CONFIG_PICOMODA9_CAPTOUCH_MXT224
-//#define CONFIG_PICOMODA9_CAPTOUCH_FT5x06
+//#define CONFIG_PICOMODA9_CAPTOUCH_MXT224
+#define CONFIG_PICOMODA9_CAPTOUCH_FT5x06
 //#define CONFIG_PICOMODA9_CAPTOUCH_SITRONIX
 //#define CONFIG_PICOMODA9_CAPTOUCH_ILITEK
 
