--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -374,10 +374,16 @@
 	/* LVDS backlight PWM (PWM3) */
 	backlight_ldb {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
 		power-supply = <&reg_ldb_bl>;
+#ifndef DISPLAY_LVDS_CHIMEI
+		pwms = <&pwm3 0 250000 PWM_POLARITY_INVERTED>;
+		brightness-levels = <135 143 151 159 167 175 183 191
+				     199 207 215 223 231 239 247 255>;
+#else
+		pwms = <&pwm3 0 5000000 0>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
+#endif
 		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif1";
 	};
@@ -558,8 +564,9 @@
 };
 #endif
 
+#ifdef CONFIG_QBLISSA9_I2C_D
 /* I2C2 is used for internal communication (RTC, PMIC), always active */
-&i2c2{
+&i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
@@ -683,6 +690,7 @@
 	};
 #endif
 };
+#endif
 
 #ifdef CONFIG_QBLISSA9_I2C_A
 /* I2C_A implemented via I2C3 */
@@ -727,6 +735,8 @@
 		interrupt-parent = <&gpio4>;
 		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
 		reset-gpio = <&gpio4 31 GPIO_ACTIVE_LOW>;
+		x-rev;
+		y-rev;
 		linux,wakeup;
 	};
 #endif
@@ -816,6 +826,7 @@
 &pwm3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3>;
+	#pwm-cells = <3>;
 	status = "okay";
 };
 #endif
@@ -1411,12 +1422,14 @@
 		};
 #endif
 
+#ifdef CONFIG_QBLISSA9_I2C_D
 		pinctrl_i2c2: i2c2grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL3__GPIO4_IO12		0x4001b8b1
-				MX6QDL_PAD_KEY_ROW3__GPIO4_IO13		0x4001b8b1
+				MX6QDL_PAD_KEY_COL3__I2C2_SCL		0x4001b8b1
+				MX6QDL_PAD_KEY_ROW3__I2C2_SDA		0x4001b8b1
 			>;
 		};
+#endif
 
 #ifdef CONFIG_QBLISSA9_HDMI
 		pinctrl_i2c_gpio_hdmi: i2c6_gpio_hdmi_grp {
