--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -408,10 +408,16 @@
 	/* LVDS backlight PWM (PWM3) */
 	backlight_ldb {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
 		power-supply = <&reg_ldb_bl>;
+#ifndef DISPLAY_LVDS_CHIMEI
+		pwms = <&pwm3 0 250000 PWM_POLARITY_INVERTED>;
+		brightness-levels = <135 143 151 159 167 175 183 191
+				     199 207 215 223 231 239 247 255>;
+#else
+		pwms = <&pwm3 0 5000000 0>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
+#endif
 		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif1";
 	};
@@ -619,7 +625,7 @@
 #endif
 
 /* I2C1 is used internally (RTC, EEPROM) and for cameras, always active */
-&i2c1{
+&i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
@@ -720,6 +726,8 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
 		reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
+		x-rev;
+		y-rev;
 		linux,wakeup;
 	};
 #endif
@@ -796,6 +804,7 @@
 &pwm3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3>;
+	#pwm-cells = <3>;
 	status = "okay";
 };
 #endif
