Add support for crypto unit in picocoremx7ulp
The crypto unit always occurs a kernel panic if it´s enabled. In
consultation with nxp there is a small bug. We have to enable
CONFIG_SOC_IMX6Q to support crypto unit. This is fixed in kernel
4.14.98. There we can only add CONFIG_SOC_IMX7ULP and the crypto unit
will initialize. Until then we add the CONFIG_SOC_IMX6Q to our
defconfig.

--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -271,13 +271,13 @@
 };
 
 /* kernel panic if its enabled - Job Ring error
- * error doesn´t occur if CONFIG_SOC_MX6Q is set
+ * error doesn´t occur if CONFIG_SOC_MX6Q is set.
+ * In Kernel 4.14.98 it works without CONFIG_SOC_MX6Q.
+ * Remove CONFIG_SOC_MX6Q if kernel version is >= 4.14.98
  */
-#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION <= 120)
 &crypto {
-	status = "disabled";
+	status = "okay";
 };
-#endif
 
 #if (CONFIG_PICOCOREMX7ULP_LCDIF != DISPLAY_NONE)
 &lcdif {
