--- a/arch/arm/configs/fsimx7ulp_defconfig
+++ b/arch/arm/configs/fsimx7ulp_defconfig
@@ -17,6 +17,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_ARCH_MXC=y
+CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX7ULP=y
 # CONFIG_SWP_EMULATE is not set
 CONFIG_SMP=y
